--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,190 @@
   }
 }
 
+.slider{
+  position: relative;
+  height: 60vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.column{
+  float: left;
+  width: 25%;
+  padding: 15px;  
+}
+
+.image{
+ width: 400px;
+ height: 300px;
+ border-radius: 10px;
+
+}
+
+.right-arrow{
+ position: absolute;
+ top: 50%;
+ right: 1px;
+ font-size: 3rem;
+ color: #61dafb;
+ z-index: 10;
+ cursor: pointer;
+ user-select: none;
+}
+
+.left-arrow{
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  font-size: 3rem;
+  color: #61dafb;
+  z-index: 10;
+  cursor: pointer;
+  user-select: none;
+ }
+ .slide{
+    opacity: 0;
+    transition-duration: 1s ease;
+ }
+ 
+.Banner{
+    float: right;
+    width: 50%;
+    padding: 15px;
+    height: 85vh; 
+}
+
+.HomeAbout{
+  float: right;
+  width: 50%;
+  padding: 15px;
+  height: 60vh; 
+}
+
+.Ban22{
+  float: right;
+  width: 50%;
+  padding: 15px;
+  height: 70vh; 
+}
+
+.hHome{
+  text-align: center;
+}
+.BannerResource{
+  background-color: orangered;
+  margin-top: 20px;
+
+}
+.Ban:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.cont{
+  text-align: left;
+}
+
+.h2Banner{
+  float: left;
+  width: 20%;
+  padding: 15px;
+  height: 50vh;
+  background-color: #f8f8f8;
+    /* -webkit-box-shadow: 0 0 5px 2px #f2f2f2;
+    -moz-box-shadow: 0 0 5px 2px #f2f2f2;
+    box-shadow: 0 0 5px 2px #f2f2f2;
+    */
+}
+
+.h2BannerPh{
+  float: left;
+  width: 22%;
+  padding: 12px;
+  height: 55vh;
+  background-color: #f8f8f8;
+}
+.photo{
+  height: 310px;
+  width: 230px;
+}
+.ph{
+  width: 80%;
+  height: 55%;
+}
+.ma{
+  background-color: #f8f8f8;
+}
+
+
+.h2banner{
+  float: left;
+  width: 4%;
+  padding: 15px;
+  height: 50vh;
+  background-color: #ffff;
+}
+
+.BanAbout{
+  width: 100%;
+  padding: 15px;
+  /*height: 100vh;*/
+}
+
+.About1{
+  text-align: center;
+  color: #003366;
+}
+
+.home2:after {
+content: "";
+display: table;
+clear: both;
+}
+
+.stu{
+  color: #003366;
+  text-align: center;
+  padding: 15px 110px 15px 110px;
+}
+.dblock{
+
+  display: flex;
+   align-items: center;
+   justify-content: center;;
+  
+}
+
+.db1{
+ 
+  margin: 5px;
+  width: 400px;
+  padding: 10px;
+  font-size: 20px;
+  background-color: #ffff;
+}
+.db2{
+ 
+  width: 250px;
+  margin: 5px;
+  font-size: 30px;
+  background-color: white;
+}
+.h3H{
+  color: #003366;
+}
+.h1B{
+  font-weight: bold;
+  color: #003366;
+}
+
+ .slide{
+  opacity: 1;
+  transition-duration: 1s;
+  transform: scale(1.08);
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -22,6 +206,16 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+
+.form {
+  width: 45%;
+}
+@media only screen and (max-width: 600px) {
+  .form {
+    width: 100%;
+  }
 }
 
 .App-link {
